overflow fixed? unfixed?

--- a/res/css/index.less
+++ b/res/css/index.less
@@ -12,10 +12,13 @@
         }
     }
     .center{
-        width: 500%;
+        width: 100%;
         background-color: #E30248;
         padding: 30px 0;
+        overflow: hidden;
+        overflow-x: hidden;
         .top,.btm{
+            width: 500%;
             img{
                 height: 100%;
                 float: left;
@@ -29,7 +32,7 @@
             
         }
         hr{
-            width: 20%;
+            width: 100%;
             margin: 25px 0;
             background-color: white;
             height: 3px;
