--- a/res/css/main.less
+++ b/res/css/main.less
@@ -17,6 +17,9 @@ body{
     font-family: @font;
     color:white;
 }
+.container{
+    position: relative;
+}
 *{
     margin: 0;
     padding: 0;
